--- a/index.html
+++ b/index.html
@@ -6,48 +6,86 @@
   <title>Model Viewer with AR</title>
   
   <script type="module" src="model-viewer.min.js"></script>
- <style>
-  .slide {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    display: inline-block;
-    margin: 5px;
-  }
-  .selected {
-    border: 2px solid black;
-  }
-  #buttons {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  model-viewer {
-    width: 100%;
-    height: 500px;
-    background-color: #eee;
-    position: relative; /* Make it a positioning context */
-  }
-  #ar-button {
-    background-image: url(ar_icon.png);
-     background-color: #efefef;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute; /* Absolute inside model-viewer */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Center it perfectly */
-    z-index: 10; /* Ensure it’s above the model */
-  }
-</style>
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f0f0f0;
+    }
+    model-viewer {
+      width: 100%;
+      height: 500px;
+      background-color: #eee;
+      position: relative;
+      display: block;
+    }
+    #ar-button {
+      background-image: url('ar_icon.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-color: #efefef;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 50%;
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      width: 70px;
+      height: 70px;
+    }
+    #buttons {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      z-index: 5;
+    }
+    /* General button styles */
+    .slide {
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      display: inline-block;
+      margin: 5px;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 10px;
+      font-weight: bold;
+      backdrop-filter: blur(5px);
+      min-width: 100px;
+    }
+    /* Specific background images for each button */
+    #button1 {
+      background-image: url('icon.png'); /* Intro button */
+    }
+    #button2 {
+      background-image: url('icon_1.png'); /* Parts button */
+    }
+    #button3 {
+      background-image: url('icon_2.png'); /* Usage button */
+    }
+    /* Selected button border */
+    .selected {
+      border: 2px solid #000;
+    }
+    audio {
+      width: 100%;
+      margin-top: 20px;
+    }
+  </style>
 </head>
+
 <body>
-
-
 
 <model-viewer id="model-viewer" 
   src="USAGE.glb"
@@ -55,17 +93,19 @@
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
-  auto-rotate
-  style="width: 100%; height: 500px; background-color: #eee;">
-  <button slot="ar-button" id="ar-button">View in AR</button>
+  auto-rotate>
+  
+  <button slot="ar-button" id="ar-button"></button>
+
   <div id="buttons">
-  <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')">Intro</button>
-  <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')">Parts</button>
-  <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')">Usage</button>
-</div>
+    <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')">Intro</button>
+    <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')">Parts</button>
+    <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')">Usage</button>
+  </div>
+  
 </model-viewer>
 
-<audio id="audioPlayer" controls autoplay style="width: 100%; margin-top: 20px;">
+<audio id="audioPlayer" controls autoplay>
   <source src="Intro.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
