--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     }
     /* Specific background images for each button */
     #button1 {
-      background-image: url('icon.png'); /* Intro button */
+      background-image: url('Icon.png'); /* Intro button */
     }
     #button2 {
-      background-image: url('icon_1.png'); /* Parts button */
+      background-image: url('Icon_1.png'); /* Parts button */
     }
     #button3 {
-      background-image: url('icon_2.png'); /* Usage button */
+      background-image: url('Icon_2.png'); /* Usage button */
     }
     /* Selected button border */
     .selected {
