--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
   <button slot="ar-button" id="ar-button"></button>
 
   <div id="buttons">
-    <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')">Intro</button>
-    <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')">Parts</button>
-    <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')">Usage</button>
+    <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')"></button>
+    <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')"></button>
+    <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')"></button>
   </div>
   
 </model-viewer>
