--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
     #buttons {
       position: absolute;
-      bottom: 10px;
+      bottom: 20px;
       width: 100%;
       text-align: center;
       z-index: 5;
@@ -53,16 +53,21 @@
       background-position: center;
       background-repeat: no-repeat;
       color: #fff;
-      border: none;
+      border: 2px solid transparent;
       cursor: pointer;
       display: inline-block;
-      margin: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 10px;
+      margin: 0 10px;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
       font-weight: bold;
       backdrop-filter: blur(5px);
-      min-width: 100px;
+      position: relative;
+      overflow: hidden;
+      text-align: center;
+      line-height: 80px;
+      font-size: 14px;
+      background-color: #ddd;
     }
     /* Specific background images for each button */
     #button1 {
@@ -74,9 +79,22 @@
     #button3 {
       background-image: url('Icon_2.png'); /* Usage button */
     }
-    /* Selected button border */
+    /* Selected button */
     .selected {
       border: 2px solid #000;
+    }
+    /* Button label */
+    .slide span {
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      font-size: 12px;
+      padding: 2px 5px;
+      border-radius: 5px;
+      white-space: nowrap;
     }
     audio {
       width: 100%;
@@ -98,9 +116,15 @@
   <button slot="ar-button" id="ar-button"></button>
 
   <div id="buttons">
-    <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')"></button>
-    <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')"></button>
-    <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')"></button>
+    <button class="slide selected" id="button1" onclick="switchSrc(1, 'USAGE.glb', 'Intro.mp3')">
+      <span>Intro</span>
+    </button>
+    <button class="slide" id="button2" onclick="switchSrc(2, 'Sterrad_PARTS.glb', 'parts.mp3')">
+      <span>Parts</span>
+    </button>
+    <button class="slide" id="button3" onclick="switchSrc(3, 'Steerad.glb', 'Usage.mp3')">
+      <span>Usage</span>
+    </button>
   </div>
   
 </model-viewer>
