--- a/index.html
+++ b/index.html
@@ -107,19 +107,20 @@
     ar-modes="scene-viewer webxr quick-look"
     camera-controls
     auto-rotate>
-  </model-viewer>
-
+    
   <div class="button-row">
     <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
-      <img src="icon1.png" alt="Intro">
+      <img src="Icon1.png" alt="Intro">
     </button>
     <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
-      <img src="icon2.png" alt="Parts">
+      <img src="Icon2.png" alt="Parts">
     </button>
     <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
-      <img src="icon3.png" alt="Usage">
+      <img src="Icon3.png" alt="Usage">
     </button>
   </div>
+  </model-viewer>
+
 
   <audio id="audioPlayer" controls autoplay>
     <source src="Intro.mp3" type="audio/mpeg">
