--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     }
 
     .button-row {
-      margin-top: 10px;
+      margin-bottom: 10px;
       display: flex;
       justify-content: center;
       gap: 10px;
@@ -110,13 +110,13 @@
     
   <div class="button-row">
     <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
-      <img src="Icon1.png" alt="Intro">
+      <img src="Icon.png" alt="Intro">
     </button>
     <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
-      <img src="Icon2.png" alt="Parts">
+      <img src="Icon_1.png" alt="Parts">
     </button>
     <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
-      <img src="Icon3.png" alt="Usage">
+      <img src="Icon_2.png" alt="Usage">
     </button>
   </div>
   </model-viewer>
