--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Model Viewer Medical UI</title>
-  
+  <title>Model Viewer with Internal Buttons</title>
+
   <script type="module" src="model-viewer.min.js"></script>
 
   <style>
@@ -27,6 +27,10 @@
       padding: 20px 10px 10px 10px;
       position: relative;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 600px;
     }
 
     .header {
@@ -47,22 +51,33 @@
       color: #666;
     }
 
-    model-viewer {
+    .model-container {
+      position: relative;
       width: 100%;
       height: 320px;
       background: #f4f4f4;
       border-radius: 12px;
+      overflow: hidden;
+    }
+
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
     }
 
     .button-row {
-      margin-bottom: 10px;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
-      justify-content: center;
       gap: 10px;
+      z-index: 2;
     }
 
     .button-icon {
-      background: #eee;
+      background: rgba(255, 255, 255, 0.8);
       border: none;
       border-radius: 8px;
       padding: 10px;
@@ -73,6 +88,7 @@
       align-items: center;
       cursor: pointer;
       transition: all 0.2s ease;
+      backdrop-filter: blur(5px);
     }
 
     .button-icon img {
@@ -81,13 +97,13 @@
     }
 
     .button-icon:hover {
-      background: #ddd;
-      transform: scale(1.05);
+      background: rgba(240, 240, 240, 0.9);
+      transform: scale(1.1);
     }
 
     audio {
       width: 100%;
-      margin-top: 15px;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -100,27 +116,28 @@
     <span>ACTIS™+P SOLUTION</span>
   </div>
 
-  <model-viewer id="model-viewer" 
-    src="USAGE.glb"
-    ios-src="USAGE.usdz"
-    ar
-    ar-modes="scene-viewer webxr quick-look"
-    camera-controls
-    auto-rotate>
-    
-  <div class="button-row">
-    <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
-      <img src="Icon.png" alt="Intro">
-    </button>
-    <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
-      <img src="Icon_1.png" alt="Parts">
-    </button>
-    <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
-      <img src="Icon_2.png" alt="Usage">
-    </button>
-  </div>
-  </model-viewer>
+  <div class="model-container">
+    <model-viewer id="model-viewer" 
+      src="USAGE.glb"
+      ios-src="USAGE.usdz"
+      ar
+      ar-modes="scene-viewer webxr quick-look"
+      camera-controls
+      auto-rotate>
+    </model-viewer>
 
+    <div class="button-row">
+      <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
+        <img src="Icon.png" alt="Intro">
+      </button>
+      <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
+        <img src="Icon_1.png" alt="Parts">
+      </button>
+      <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
+        <img src="Icon_2.png" alt="Usage">
+      </button>
+    </div>
+  </div>
 
   <audio id="audioPlayer" controls autoplay>
     <source src="Intro.mp3" type="audio/mpeg">
