--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
       transform: scale(1.1);
     }
 
+    /* Hide the audio controls */
     audio {
-      width: 100%;
-      margin-top: 10px;
+      display: none;
     }
   </style>
 </head>
@@ -138,7 +138,8 @@
     </div>
   </div>
 
-  <audio id="audioPlayer" controls autoplay>
+  <!-- Audio player is hidden, only plays audio -->
+  <audio id="audioPlayer" autoplay>
     <source src="Intro.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
