--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
       align-items: center;
       height: 100vh;
     }
+    #ar-button {
+  background-image: url(ar_icon.png);
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 12px 50%;
+  background-color: #efefef;
+  position: absolute;
+  white-space: nowrap;
+  font-family: Roboto Regular, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  color:#636363;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 18px;
+  border: 1px solid #DADCE0;
+  box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
+}
 
     .card {
       background: white;
