--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
       ar-modes="scene-viewer webxr quick-look"
       camera-controls
       auto-rotate>
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button">
+        View in 4D
+       </button>
        <div class="header">
     <img src="4.png" alt="Logo">
     <span>ACTIS™+P SOLUTION</span>
