--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
       height: 100%;
       border-radius: 12px;
     }
+     .attributiontwo {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 10px 0;
+        }
 
     .button-row {
       position: absolute;
