--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         }
 
         .card {
-            background: white;
+            /* background: white;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             width: 350px;
             padding: 20px 10px 10px 10px;
             position: relative;
-            text-align: center;
+            text-align: center; */
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: 600px;
+            /* height: 600px; */
         }
 
         .header {
@@ -134,6 +134,10 @@
         /* Hide the audio controls */
         audio {
             display: none;
+        }
+        .icon{
+            width: 50px;
+            height: 50px;
         }
     </style>
 </head>
