--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         }
 
         .card {
-            /* background: white;
+            background: white;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             width: 350px;
             padding: 20px 10px 10px 10px;
             position: relative;
-            text-align: center; */
+            text-align: center;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -122,8 +122,8 @@
         }
 
         .button-icon img {
-            width: 24px;
-            height: 24px;
+            width: 50px;
+            height: 50px;
         }
 
         .button-icon:hover {
@@ -138,6 +138,7 @@
         .icon{
             width: 50px;
             height: 50px;
+            padding: 10px;
         }
     </style>
 </head>
