--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             background-color: #efefef;
             position: absolute;
             left: 50%;
+            top: 40%;
             transform: translateX(-50%);
             white-space: nowrap;
             bottom: 16px;
