--- a/index.html
+++ b/index.html
@@ -2,226 +2,230 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Model Viewer with Internal Buttons</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Model Viewer with Internal Buttons</title>
 
-    <script type="module" src="model-viewer.min.js"></script>
+  <script type="module" src="model-viewer.min.js"></script>
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #fafafa;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fafafa;
+      font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        #ar-button {
-            background-image: url(ar_icon.png);
-            background-repeat: no-repeat;
-            background-size: 20px 20px;
-            background-position: 12px 50%;
-            background-color: #efefef;
-            position: absolute;
-            left: 50%;
-            top: 70%;
-            transform: translateX(-50%);
-            white-space: nowrap;
-            bottom: 16px;
-            padding: 0px 16px 0px 40px;
-            font-family: Roboto Regular, Helvetica Neue, sans-serif;
-            font-size: 14px;
-            color: #636363;
-            height: 36px;
-            line-height: 36px;
-            border-radius: 18px;
-            border: 1px solid #DADCE0;
-            box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
-        }
+    #ar-button {
+      background-image: url(ar_icon.png);
+      background-repeat: no-repeat;
+      background-size: 20px 20px;
+      background-position: 12px 50%;
+      background-color: #efefef;
+      position: absolute;
+      left: 50%;
+      top: 70%;
+      transform: translateX(-50%);
+      white-space: nowrap;
+      bottom: 16px;
+      padding: 0px 16px 0px 40px;
+      font-family: Roboto Regular, Helvetica Neue, sans-serif;
+      font-size: 14px;
+      color: #636363;
+      height: 36px;
+      line-height: 36px;
+      border-radius: 18px;
+      border: 1px solid #DADCE0;
+      box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
+    }
 
-        .card {
-            background: white;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
-            padding: 20px 10px 10px 10px;
-            position: relative;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            /* height: 600px; */
-        }
+    .card {
+      background: white;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 350px;
+      padding: 20px 10px 10px 10px;
+      position: relative;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+    }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-            padding: 0 10px;
-        }
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+      padding: 0 10px;
+    }
 
-        .header img {
-            height: 20px;
-        }
+    .header img {
+      height: 20px;
+    }
 
-        .header span {
-            font-size: 10px;
-            font-weight: bold;
-            color: #666;
-        }
+    .header span {
+      font-size: 10px;
+      font-weight: bold;
+      color: #666;
+    }
 
-        .model-container {
-            position: relative;
-            width: 100%;
-            height: 500px;
-            background: #f4f4f4;
+    .model-container {
+      position: relative;
+      width: 100%;
+      height: 500px;
+      background: #f4f4f4;
+      overflow: hidden;
+    }
 
-            overflow: hidden;
-        }
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
+    }
 
-        model-viewer {
-            width: 100%;
-            height: 100%;
-            border-radius: 12px;
-        }
+    .attributiontwo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 0;
+    }
 
-        .attributiontwo {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 10px 0;
-        }
+    .button-row {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+      z-index: 2;
+    }
 
-        .button-row {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 10px;
-            z-index: 2;
-        }
+    .button-icon {
+      background: rgba(255, 255, 255, 0.8);
+      border: none;
+      border-radius: 8px;
+      padding: 10px;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      backdrop-filter: blur(5px);
+    }
 
-        .button-icon {
-            background: rgba(255, 255, 255, 0.8);
-            border: none;
-            border-radius: 8px;
-            padding: 10px;
-            width: 50px;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            backdrop-filter: blur(5px);
-        }
+    .button-icon img {
+      width: 50px;
+      height: 50px;
+    }
 
-        .button-icon img {
-            width: 50px;
-            height: 50px;
-        }
+    .button-icon:hover {
+      background: rgba(240, 240, 240, 0.9);
+      transform: scale(1.1);
+    }
 
-        .button-icon:hover {
-            background: rgba(240, 240, 240, 0.9);
-            transform: scale(1.1);
-        }
+    audio {
+      display: none;
+    }
 
-        /* Hide the audio controls */
-        audio {
-            display: none;
-        }
-        .icon{
-            width: 50px;
-            height: 50px;
-            padding: 10px;
-        }
-    </style>
+    .icon {
+      width: 50px;
+      height: 50px;
+      padding: 10px;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="card">
 
-    <div class="card">
-
-        <div class="model-container">
-            <model-viewer id="model-viewer" src="USAGE.glb" ios-src="USAGE.usdz" ar
-                ar-modes="scene-viewer webxr quick-look" camera-controls auto-rotate>
-                <div class="progress-bar hide" slot="progress-bar">
-                    <div class="update-bar"></div>
-                </div>
-                <button slot="ar-button" id="ar-button">
-                    View in 4D
-                </button>
-                <div class="header">
-                    <img src="4.png" alt="Logo">
-                    <span>ACTIS™+P SOLUTION</span>
-                </div>
-            </model-viewer>
-
-            <div class="button-row">
-                <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
-                    <img src="Icon.png" alt="Intro">
-                </button>
-                <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
-                    <img src="Icon_1.png" alt="Parts">
-                </button>
-                <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
-                    <img src="Icon_2.png" alt="Usage">
-                </button>
-            </div>
+    <div class="model-container">
+      <model-viewer id="model-viewer"
+        src="USAGE.glb"
+        ios-src="USAGE.usdz"
+        ar
+        ar-modes="scene-viewer webxr quick-look"
+        ar-placement="auto"
+        camera-controls
+        auto-rotate
+        autoplay
+        animation-name="*"
+        exposure="1"
+        shadow-intensity="1">
+        <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
         </div>
-        <section class="attributiontwo">
-            <p style="background-image: url('black.png')"
-                style="width:60px;height:60px; padding-left: 0px;padding-top: 10px;">
 
-                <span>
-                    <a
-                        href="https://www.jnjmedtech.com/system/files/pdf/AU-116499-210702%20ACTIS%20Design%20Rationale.pdf"><img
-                            src="Brochure_1.png" class="icon"></a>
-                    <a href="https://www.youtube.com/watch?v=XydpQaukoEQ"><img src="Video_1.png" class="icon"></a>
-                    <a href="https://www.jnjmedtech.com/en-US/product/actis-total-hip-solutions"><img
-                            src="web_1.png" class="icon"></a>
-                    <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
-                            src="form_1.png" class="icon"></a>
+        <button slot="ar-button" id="ar-button">View in 4D</button>
 
-                </span>
+        <div class="header">
+          <img src="4.png" alt="Logo">
+          <span>ACTIS™+P SOLUTION</span>
+        </div>
+      </model-viewer>
 
-        </section>
-        <!-- Audio player is hidden, only plays audio -->
-        <audio id="audioPlayer" autoplay>
-            <source src="Intro.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
+      <div class="button-row">
+        <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
+          <img src="Icon.png" alt="Intro">
+        </button>
+        <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
+          <img src="Icon_1.png" alt="Parts">
+        </button>
+        <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
+          <img src="Icon_2.png" alt="Usage">
+        </button>
+      </div>
     </div>
 
-    <script>
-        function switchSrc(modelPath, audioPath) {
-            const modelViewer = document.getElementById('model-viewer');
-            const audioPlayer = document.getElementById('audioPlayer');
+    <section class="attributiontwo">
+      <span>
+        <a href="https://www.jnjmedtech.com/system/files/pdf/AU-116499-210702%20ACTIS%20Design%20Rationale.pdf"><img src="Brochure_1.png" class="icon"></a>
+        <a href="https://www.youtube.com/watch?v=XydpQaukoEQ"><img src="Video_1.png" class="icon"></a>
+        <a href="https://www.jnjmedtech.com/en-US/product/actis-total-hip-solutions"><img src="web_1.png" class="icon"></a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img src="form_1.png" class="icon"></a>
+      </span>
+    </section>
 
-            modelViewer.src = modelPath;
-            modelViewer.setAttribute('ios-src', modelPath.replace('.glb', '.usdz'));
+    <audio id="audioPlayer" autoplay>
+      <source src="Intro.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 
-            audioPlayer.src = audioPath;
-            audioPlayer.play();
+  <script>
+    function switchSrc(modelPath, audioPath) {
+      const modelViewer = document.getElementById('model-viewer');
+      const audioPlayer = document.getElementById('audioPlayer');
+
+      modelViewer.src = modelPath;
+      modelViewer.setAttribute('ios-src', modelPath.replace('.glb', '.usdz'));
+
+      // Play audio
+      audioPlayer.src = audioPath;
+      audioPlayer.play();
+
+      // Play animation after model loads
+      modelViewer.addEventListener('load', () => {
+        if (modelViewer.availableAnimations.length > 0) {
+          modelViewer.play();
         }
-    </script>
+      }, { once: true }); // only trigger once per load
+    }
+  </script>
 
-    <!-- Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESGCJ1EYXM"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-ESGCJ1EYXM');
-    </script>
-
+  <!-- Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESGCJ1EYXM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-ESGCJ1EYXM');
+  </script>
 </body>
 
 </html>
