--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
 
     <div class="model-container">
       <model-viewer id="model-viewer"
-        src="USAGE.glb"
-        ios-src="USAGE.usdz"
+        src="Steerad.glb"
         ar
         ar-modes="scene-viewer webxr quick-look"
         ar-placement="auto"
@@ -169,13 +168,13 @@
       </model-viewer>
 
       <div class="button-row">
-        <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Intro.mp3')">
+        <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Intro.mp3')">
           <img src="Icon.png" alt="Intro">
         </button>
         <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
           <img src="Icon_1.png" alt="Parts">
         </button>
-        <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Usage.mp3')">
+        <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Usage.mp3')">
           <img src="Icon_2.png" alt="Usage">
         </button>
       </div>
