--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <div class="header">
           <img src="4.png" alt="Logo">
-          <span>ACTIS™+P SOLUTION</span>
+          <img src="iitname.png" alt="Logo">
         </div>
       </model-viewer>
 
