--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
       padding: 0 10px;
     }
 
-    .header img {
-      height: 20px;
-    }
+
 
     .header span {
       font-size: 10px;
@@ -162,8 +160,8 @@
         <button slot="ar-button" id="ar-button">View in 4D</button>
 
         <div class="header">
-          <img src="4.png" alt="Logo">
-          <img src="iitname.png" alt="Logo">
+          <img src="4.png" alt="Logo" style="height: 30px;">
+          <img src="iitname.png" alt="Logo" style="height: 50px;">
         </div>
       </model-viewer>
 
