--- a/index.html
+++ b/index.html
@@ -1,227 +1,204 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Model Viewer with Internal Buttons</title>
-
-  <script type="module" src="model-viewer.min.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #fafafa;
-      font-family: 'Arial', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    #ar-button {
-      background-image: url(ar_icon.png);
-      background-repeat: no-repeat;
-      background-size: 20px 20px;
-      background-position: 12px 50%;
-      background-color: #efefef;
-      position: absolute;
-      left: 50%;
-      top: 70%;
-      transform: translateX(-50%);
-      white-space: nowrap;
-      bottom: 16px;
-      padding: 0px 16px 0px 40px;
-      font-family: Roboto Regular, Helvetica Neue, sans-serif;
-      font-size: 14px;
-      color: #636363;
-      height: 36px;
-      line-height: 36px;
-      border-radius: 18px;
-      border: 1px solid #DADCE0;
-      box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
-    }
-
-    .card {
-      background: white;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 350px;
-      position: relative;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 10px;
-      padding: 0 10px;
-    }
-
-
-
-    .header span {
-      font-size: 10px;
-      font-weight: bold;
-      color: #666;
-    }
-
-    .model-container {
-      position: relative;
-      width: 100%;
-      height: 500px;
-      background: #f4f4f4;
-      overflow: hidden;
-    }
-
-    model-viewer {
-      width: 100%;
-      height: 100%;
-      border-radius: 12px;
-    }
-
-    .attributiontwo {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 10px 0;
-    }
-
-    .button-row {
-      position: absolute;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 10px;
-      z-index: 2;
-    }
-
-    .button-icon {
-      background: rgba(255, 255, 255, 0.8);
-      border: none;
-      border-radius: 8px;
-      padding: 10px;
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      backdrop-filter: blur(5px);
-    }
-
-    .button-icon img {
-      width: 50px;
-      height: 50px;
-    }
-
-    .button-icon:hover {
-      background: rgba(240, 240, 240, 0.9);
-      transform: scale(1.1);
-    }
-
-    audio {
-      display: none;
-    }
-
-    .icon {
-      width: 50px;
-      height: 50px;
-      padding: 10px;
-    }
-  </style>
+    <title>STERRAD™ 100NX System</title>
+    <meta charset="utf-8">
+    <meta name="description" content="&lt;model-viewer&gt; template">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" href="./styles.css" rel="stylesheet" />
+    <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
+    <script src="https://cdn.jsdelivr.net/npm/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="./src/threejs_wasm_worker.js"></script>
+    <script href="https://developers.google.com/ar/develop/java/scene-viewer"></script>
+    <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
 </head>
 
 <body>
-  <div class="card">
-
-    <div class="model-container">
-      <model-viewer id="model-viewer"
-        src="Steerad.glb"
-        ar
-        ar-modes="scene-viewer webxr quick-look"
-        ar-placement="auto"
-        camera-controls
-        auto-rotate
-        autoplay
-        animation-name="*"
-        exposure="1"
-        shadow-intensity="1">
-        <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
-        </div>
-
-        <button slot="ar-button" id="ar-button">View in 4D</button>
-
-        <div class="header">
-          <img src="4.png" alt="Logo" style="height: 30px;">
-          <img src="iitname.png" alt="Logo" style="height: 50px;">
-        </div>
-      </model-viewer>
-
-      <div class="button-row">
-        <button class="button-icon" onclick="switchSrc('Steerad.glb', 'Intro.mp3')">
-          <img src="Icon.png" alt="Intro">
+    <div id="card">
+        <audio id="audio">
+            <source id="audio-source" src="Intro.mp3" type="audio/mpeg">
+        </audio>
+        <!-- <audio id="audio1">
+            <source src="parts.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="audio2">
+            <source src="Usage.mp3" type="audio/mpeg">
+        </audio> -->
+       <model-viewer id="toggle-model" src="Steerad.glb"
+    ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
+    ar-modes="webxr scene-viewer quick-look" camera-controls alt=""
+    shadow-intensity=".25" touch-action="pan-y" environment-image="legacy"
+    animation-loop="false" autoplay>
+            <div class=" progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+    </div>
+        <button slot="ar-button" id="ar-button">
+            View in 4D
         </button>
-        <button class="button-icon" onclick="switchSrc('Sterrad_PARTS.glb', 'parts.mp3')">
-          <img src="Icon_1.png" alt="Parts">
-        </button>
-        <button class="button-icon" onclick="switchSrc('USAGE.glb', 'Usage.mp3')">
-          <img src="Icon_2.png" alt="Usage">
-        </button>
-      </div>
+         
+    <div id="button" style="display:flex; justify-content: space-between; transform: translate(0px,0px);">
+        <img src="4.png" align="center" style="width:100px; padding-left: 5px;padding-top: 0px;" />
+        <img src="Cam.png" style="width:120px; padding-right: 5px;padding-top: 0px;" />
+    </div>
+    <div id="all">          
+    <button3 class="slide selected" id="1" id="textr" onclick="switchSrc(1,'USAGE.glb','Intro.mp3',show())"
+       style="transform:translateX(30px);" ><img src="Icon_2.png" id="youtube-icon" style="width:40px;height:40px;"></button3>
+    <a class="slide selected" id="11" onclick="switchSrc('sterrad_anim.glb')"></a>
+    <button1 class="slide selected" id="2" id="textrs" onclick="switchSrc(2,'Sterrad_PARTS.glb','parts.mp3',show())"
+        ><img src="Icon_1.png" id="youtube-icon" style="width:40px;height:40px;"></button1>
+    <a class="slide selected" id="22" onclick="switchSrc('Steeradtext.glb')"></a>
+    <button2 class="slide selected" id="3" id="textrst" onclick="switchSrc(3,'Steerad.glb','Usage.mp3',show())"
+        style="transform:translateX(-30px);"><img src="Icon.png" id="youtube-icon"
+            style="width:40px;height:40px;"></button2>
+    <a class="slide selected" id="33" onclick="switchSrc('Steerad.glb')"></a>
+     </div>
+    <div id="ar-prompt">
+        <img src="ar_hand_prompt.png">
     </div>
 
+    </model-viewer>
     <section class="attributiontwo">
-      <span>
-        <a href="https://www.jnjmedtech.com/system/files/pdf/AU-116499-210702%20ACTIS%20Design%20Rationale.pdf"><img src="Brochure_1.png" class="icon"></a>
-        <a href="https://www.youtube.com/watch?v=XydpQaukoEQ"><img src="Video_1.png" class="icon"></a>
-        <a href="https://www.jnjmedtech.com/en-US/product/actis-total-hip-solutions"><img src="web_1.png" class="icon"></a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img src="form_1.png" class="icon"></a>
-      </span>
+        <p style="background-image: url('black.png')"
+            style="width:60px;height:60px; padding-left: 0px;padding-top: 10px;">
+
+            <span>
+                <a
+                    href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf"><img
+                        src="Brochure.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 17px;padding-top: 0px;"></a>
+                <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video.png" id="youtube-icon"
+                        align="center" style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a
+                    href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear"><img
+                        src="web.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a href="https://drive.google.com/file/d/1hFf5OK8XdV_q6UZ7WFcwiR3xrxWkUQ4Z/view?usp=sharing"><img
+                        src="serch.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
+                        src="form.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+
+            </span>
+
     </section>
-
-    <audio id="audioPlayer" autoplay>
-      <source src="Intro.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-
-  <script>
-    function switchSrc(modelPath, audioPath) {
-      const modelViewer = document.getElementById('model-viewer');
-      const audioPlayer = document.getElementById('audioPlayer');
-
-      modelViewer.src = modelPath;
-      modelViewer.setAttribute('ios-src', modelPath.replace('.glb', '.usdz'));
-
-      // Play audio
-      audioPlayer.src = audioPath;
-      audioPlayer.play();
-
-      // Play animation after model loads
-      modelViewer.addEventListener('load', () => {
-        if (modelViewer.availableAnimations.length > 0) {
-          modelViewer.play();
+    <script>
+        function openURL() {
+            window.open("https://seventh-reality.github.io/Sterrad_Android_IOS/", "_blank"); // Opens in a new tab
         }
-      }, { once: true }); // only trigger once per load
-    }
-  </script>
+    </script>
+   
+    <script>
+        function show() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('1')
+                .style.display = "none";
+        }
+        function show() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('2')
+                .style.display = "none";
+        }
+        function show() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('3')
+                .style.display = "none";
+        }
 
-  <!-- Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ESGCJ1EYXM"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-ESGCJ1EYXM');
-  </script>
+        const models = ['Steerad.glb', 'Steeradtext.glb', 'sterrad_anim.glb'];
+        const toggleModel = document.querySelector('#toggle-model');
+        const modelViewer = document.querySelector('#toggle-model');
+
+          // Stop animation
+        modelViewer.pause();
+        // let j = 0;
+        // setInterval(() => toggleModel.setAttribute('src', `${models[j++ % 2]}`), 2000);
+        function handleButtonDisplay(indx) {
+                document.getElementById("1").style.setProperty('display', 'inline');
+                document.getElementById("2").style.setProperty('display', 'inline');
+                document.getElementById("3").style.setProperty('display', 'inline');
+
+                // Set visibility based on the index
+                switch (indx) {
+                    case 2:
+                        document.getElementById("11").style.setProperty('display', 'inline');
+                        document.getElementById("22").style.setProperty('display', 'none');
+                        document.getElementById("33").style.setProperty('display', 'none');
+                        break;
+                    case 3:
+                        document.getElementById("11").style.setProperty('display', 'none');
+                        document.getElementById("22").style.setProperty('display', 'inline');
+                        document.getElementById("33").style.setProperty('display', 'none');
+                        break;
+                    default:
+                        document.getElementById("11").style.setProperty('display', 'none');
+                        document.getElementById("22").style.setProperty('display', 'none');
+                        document.getElementById("33").style.setProperty('display', 'inline');
+                        break;
+                }
+        }
+        function switchSrc(indx, src, audioSource) {
+        const modelViewer = document.querySelector('#toggle-model');
+
+        // Play the audio and then switch the model
+        playAudio(audioSource);
+        modelViewer.setAttribute('src', `${src}`);
+
+        // Play the animation for 1 minute (60000ms), then stop it
+        modelViewer.play();  // Start the animation
+        setTimeout(() => {
+            modelViewer.pause();  // Stop the animation after 1 minute
+        }, 11250);  // 1 minute = 60000 milliseconds
+
+        handleButtonDisplay(indx);
+    }
+
+    function stop() {
+        const modelViewer = document.querySelector('#toggle-model');
+        modelViewer.pause();
+    }
+
+    function playAudio(newSrc) {
+        var audioElement = document.getElementById("audio");
+        var sourceElement = document.getElementById("audio-source");
+
+        // Update the source
+        sourceElement.src = newSrc;
+
+        // Load the new source
+        audioElement.load();
+
+        // Play the audio
+        audioElement.play();
+    }
+
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQL89QFMW8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YQL89QFMW8');
+    </script>
+
+
+
+    </dev>
+    <script type="module" src="https://unpkg.com/@onirix/ar-engine-sdk@1.8.1/dist/ox-sdk.esm.js"></script>
+    <script type="module" src="model-viewer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="model-viewer.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
