--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <section class="attributiontwo" style="text-align: center; padding: 10px; transform: translateY(-20px);">
     <p style="background-image: url('black.png'); display: inline-block; padding: 10px;">
         <span style="display: flex; justify-content: center; gap: 20px; align-items: center;">
-            <a href="https://www.jnjmedtech.com/system/files/pdf/AU-116499-210702%20ACTIS%20Design%20Rationale.pdf">
+            <a href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf">
                 <img src="Brochure_1.png" alt="Brochure" style="width:40px;height:40px;">
             </a>
-            <a href="https://www.youtube.com/watch?v=XydpQaukoEQ">
+            <a href="https://www.youtube.com/watch?v=39HnBANsPyo">
                 <img src="Video_1.png" alt="Video" style="width:40px;height:40px;">
             </a>
-            <a href="https://www.jnjmedtech.com/en-US/product/actis-total-hip-solutions">
+            <a href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear">
                 <img src="web_1.png" alt="Website" style="width:40px;height:40px;">
             </a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link">
