--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
   gap: 20px;
   z-index: 1000;
 ">
-  <button class="slide selected" id="3" onclick="switchSrc(3,'USAGE.glb')" style="background: none; border: none;">
+  <button class="slide selected" id="3" onclick="switchSrc(3,'Steerad.glb')" style="background: none; border: none;">
     <img src="Icon.png" alt="Leg" style="width: 40px; height: 40px;">
   </button>
   <button class="slide selected" id="2" onclick="switchSrc(2,'Sterrad_PARTS.glb')" style="background: none; border: none;">
     <img src="Icon_1.png" alt="Hip" style="width: 40px; height: 40px;">
   </button>
-  <button class="slide selected" id="1" onclick="switchSrc(1,'Steerad.glb', play_to_end())" style="background: none; border: none;">
+  <button class="slide selected" id="1" onclick="switchSrc(1,'USAGE.glb', play_to_end())" style="background: none; border: none;">
     <img src="Icon_2.png" alt="Animation" style="width: 40px; height: 40px;">
   </button>
 </div>
