--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
             gtag('js', new Date());
             gtag('config', 'G-YQL89QFMW8');
         </script>
+        <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "r1w6qgygsg");
+</script>
 
         <script type="module" src="https://unpkg.com/@onirix/ar-engine-sdk@1.8.1/dist/ox-sdk.esm.js"></script>
         <script type="module" src="model-viewer.min.js"></script>
